radix-transactions/tests/assets/manifest_lexer_error_invalid_integer_type_1.diag
error: invalid integer type 'i9'
  |
3 |     "lock_fee"
4 | ;
5 | CALL_METHOD
6 |     Address("component_sim1cpyavrltfeu9ppx24pcpvh93xf44sfjygtv6dgf6uq3cdwafl7f9rq")
7 |     "some_method"
8 |     Decimal(300i9)
  |                ^^ invalid integer type
9 | ;
  |