radix-transactions/tests/assets/manifest_lexer_error_invalid_integer_type_1.rtm
CALL_METHOD
    Address("component_sim1cptxxxxxxxxxfaucetxxxxxxxxx000527798379xxxxxxxxxhkrefh")
    "lock_fee"
;
CALL_METHOD
    Address("component_sim1cpyavrltfeu9ppx24pcpvh93xf44sfjygtv6dgf6uq3cdwafl7f9rq")
    "some_method"
    Decimal(300i9)
;
